
Changes in Version 0.5-5 (in development)

 o new function do.plot.list, to create and merge multiple plots.

 o c.trellis will now recalculate panel limits when x/y.same=TRUE.

 o new function doubleYScale, to easily overlay two plot series.

 o new functions panel.lmlineq and panel.ablineq for line equations.

 o marginal.plot handles non-syntactic variable names;
   also now coerces to data.frame (so e.g. works with a matrix).

 o changes to default axis style in marginal.plot.

 o new dataset EastAuClimate.

Changes in Version 0.5-4

 o marginal.plot now handles table objects sensibly.

 o marginal.plot now applies 'subset' to 'groups', as it should.

Changes in Version 0.5-3

 o improvements to marginal.plot including support for groups.

 o fix to marginal.plot: failed with only numeric variables.

 o fix to panel.voronoi (with use.tripack = FALSE):
   wrong colors were used when xlim/ylim enclosed a data subset.

 o new function 'as.layer' and a method 'as.layer.trellis'.
   This allows panels to be overlaid with independent x/y scales.

Previous Changes

 o several new data sets and a few utility functions

 o dendrogramGrob to produce a dendrogram that can be used as a legend

 o new generic function 'gplot' -- like 'plot', but meant to produce a
   `grouped' Trellis plot.  Methods can be defined for objects that
    already have a 'plot' method.  API Currently unstable.
